상단 날씨 추가

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <div id="menuBar">
                 <div id="date"></div>
                 <div id="time"></div>
+                <div id="weather"></div>
                 <img src="./img/menuBtn.png" id="topMenu">
+ <!-- --------------------------------상단메뉴--------------------------------->               
                 <div id="menuList">
                     <div id="tohome" class="menu">
                         home
