지역 변경시 하단 일기예보도 변경

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div id="high_low_temperature" class="weatherInfo"></div>
                     </div>
                     <div id="todayTemp">
-                        <div id="aboutToday"></div>
+                        <!-- <div id="aboutToday"></div> -->
                         <div id="temp_per_hour">
                             <!-- <div class="temp_per_hour_unit"> 예시
                                 <div class="tempTime">00시</div>
